--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "export": "next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/roboto": "^4.5.3",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/lab": "^5.0.0-alpha.69",
+    "@mui/material": "^5.4.2",
+    "framer-motion": "^6.2.6",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
